--- a/api/routes/buyer/templates/base.html
+++ b/api/routes/buyer/templates/base.html
@@ -7,7 +7,7 @@
 		<meta keywords="shop, purchase, pay">
 		<meta name="author" content="Binael Nchekwube">
 		<!-- Block for title-->
-		<title>{% block title %}{% endblock %}</title>
+		<title>{% block title %} Odogwu Stores {% endblock %}</title>
 		<!-- Favicon -->
 		<link rel="shortcut icon" type="image/x-icon" href="{{ url_for('.static', filename='images/favicon.png') }}">
 		<!-- Custom stylesheet -->
@@ -24,7 +24,7 @@
 		<header class="other-services">
 				<a href="#o-pay"><i class="bx bx-money"></i> O-Pay</a>
 				<a href="#o-logistics"><i class="bx bx-bus"></i>O-Logistics</a>
-				<a href="/o-sellers"><i class="bx bx-group" ></i>O-Sellers</a>
+				<a href="/o-seller"><i class="bx bx-group" ></i>O-Seller</a>
 				<a href="#o-food"><i class="bx bx-bowl-rice"></i>O-Food</a>
 		</header>
 		<header class="my-header">
@@ -95,8 +95,9 @@
 			</section>
 			<section class="subscribe">
 				<h3>Subscribe To Our NewsLetter</h3>
-				<form action="" class="subscription">
-					<input type="text" placeholder="Email" name="suscriber" class="subscriber">
+				<form action="" class="subscription" method="POST">
+					{{ subscribe.csrf_token }}
+					{{ subscribe.email(class="subscriber", placeholder="Email") }}
 					<input type="submit" value="Submit" class="subscriber-submit">
 				</form>
 			</section>
