--- a/api/routes/seller/static/styles/base.css
+++ b/api/routes/seller/static/styles/base.css
@@ -17,7 +17,13 @@
 }
 
 :root {
-	--link-hover-color: orangered;
+	--bg-color: rgb(38, 117, 38);
+	--link-hover-color: rgb(79, 240, 79);
+}
+
+input {
+	padding: 8px;
+	text-transform: none;
 }
 
 a {
@@ -29,6 +35,7 @@ a {
 li {
 	list-style-type: none;
 }
+/* - End of Style for Global Properties - */
 
 /* - Style for other-services header - */
 .other-services {
@@ -39,7 +46,7 @@ li {
 	padding-left: 20%;
 	padding-right: 20%;
 	font-size: 1rem;
-	background-color: beige;
+	background-color: rgb(230, 225, 217);
 }
 
 .other-services a {
@@ -47,11 +54,11 @@ li {
 }
 
 .other-services a i {
-	color: orangered;
+	color: var(--bg-color);
 }
 
 .other-services a:hover {
-	color: var(--link-hover-color);
+	color: var(--bg-color);
 }
 
 .other-services a:active {
@@ -60,17 +67,22 @@ li {
 /* - End of other-services header style -*/
 
 /* - Style for header - */
-.my-header {
-	background-color: rgb(238, 131, 92);
+.header {
 	width: 100%;
+	position: sticky;
+	z-index: 1200;
+	top: 0;
+}
+
+/* - Style for main-header - */
+.main-header {
+	background-color: rgb(38, 117, 38);
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	position: sticky;
-	top: 0;
 	padding-left: 5%;
 	padding-right: 5%;
-	z-index: 1200;
+	position: relative;
 }
 
 .logo, .logo span {
@@ -83,104 +95,90 @@ li {
 	color: black;
 }
 
-.search-box {
-	width: 45%;
-	height: 2.5rem;
-	position: relative;
-}
-
-.search, .search-button {
-	height: 100%;
-	border-radius: 20px;
-	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-	position: absolute;
-}
-
-.search {
-	width: 100%;
-	border: none;
-}
-
-.search-button {
-	width: 15%;
-	z-index: 10;
-	top: 0;
-	right: 0;
-}
-
-.search-button:hover {
-	color: var(--link-hover-color);
-}
-
-.user-box, .help-box {
-	position: relative;
-	display: inline-block;
-	height: 100%;
-}
-
-.u-account:hover, .help:hover {
-	color: grey;
-}
-
-.user-box ul, .help-box ul {
-	display: none;
-	position: absolute;
-	width: 210px;
-	background-color: lightgray;
-	border-radius: 30px;
-	padding: 30px;
-	margin-left: -40%;
-	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-}
-
-.dropdown li {
-	margin: 0;
-	padding: 5px 0;
-}
-
-.dropdown li a {
-	padding-top: 5px;
-	color: black;
-	margin: 0;
-	display: block;
-	text-align: center;
-	font-size: 0.9em;
-	text-transform: none;
-}
-
-.dropdown li a:hover {
-	color: var(--link-hover-color);
-}
-
-.line-divide1 {
-	margin-top: 3px;
-	margin-bottom: 3px;
-}
-
-.user-box:hover ul, .help-box:hover ul {
-	display: block;
-}
-
-.cart-icon {
+.user-box {
 	display: flex;
-	justify-content: space-between;
+    align-items: center;
+	justify-content: space-evenly;
+	width: 45%;
+}
+
+.user-box a {
+	padding: 10px;
+	box-sizing: content-box;
+	padding: 4px;
+	border: 2px solid;
+	border-color: var(--bg-color);
+	border-radius: 8px;
+}
+
+.user-box a:hover {
+	border-color: var(--link-hover-color);
+}
+/* - End of Style for main-header - */
+
+/* - Start of style for filter - */
+.filter {
+	margin-top: 5px;
+	width: 100%;
+	padding-bottom: 5px;
+	border-bottom:  rgb(245, 233, 211) 1px solid;
+}
+.search-form {
+	display: flex;
+	justify-content: space-evenly;
 	align-items: center;
-	width: 7%;
 }
 
-.cart-text {
-	font-size: 0.8rem;
+.search-form div {
+	width: 25%;
 }
 
-.cart-text i {
-	font-size: 2.5rem;
+.category-select, .sub_category, .product {
+	border-radius: 8px;
 }
 
-.cart-count {
-	padding: 3px;
-	background: grey;
+.product {
+	width: 75%;
 }
-/* - End of style for myheader - */
+
+.sub_category {
+	width: 80%;
+}
+
+.category-select {
+	width: 85%;
+}
+
+.category-select, .sub_category, .product, .submit {
+	height: 2.5rem;
+}
+
+.search-form div label {
+	font-family: 'Teko', 'Poppins', sans-serif;
+}
+
+.submit, .type, .product-search {
+	margin-left: -8%;
+}
+
+.category-select option {
+	font-family: 'Poppins', sans-serif;
+}
+
+.product-search {
+	width: 35vw;
+}
+
+.submit {
+	width: 4rem;
+	border-radius: 8px;
+	cursor: pointer;
+}
+
+.submit:hover {
+	background-color: var(--bg-color);
+	color: white;
+}
 
 /* Start of style for footer */
 footer {
@@ -241,9 +239,12 @@ footer div a:hover {
 	z-index: 60;
 	right: 0;
 	background-color: grey;
+	cursor: pointer;
+	border: 1px solid;
 }
 
 .subscriber-submit:hover {
-	background-color: var(--link-hover-color);
+	background-color: var(--bg-color);
+	color: white;
 }
 /* End of footer */
