--- a/api/routes/seller/templates/base_template.html
+++ b/api/routes/seller/templates/base_template.html
@@ -24,25 +24,25 @@
 		<header class="other-services">
 			<a href="#o-pay"><i class="bx bx-money"></i> O-Pay</a>
 			<a href="#o-logistics"><i class="bx bx-bus"></i>O-Logistics</a>
-			<a href="/"><i class='bx bxs-store-alt'></i>O-Store</a>
+			<a href="{{ url_for('buyer.homepage') }}"><i class='bx bxs-store-alt'></i>O-Store</a>
 			<a href="#o-food"><i class="bx bx-bowl-rice"></i>O-Food</a>
 		</header>
 		<header class="header">
 			<section class="main-header">
-				<a class="logo" href="/o-seller">Odogwu<span>S</span>eller  <i class='bx bxs-home' ></i></a>
+				<a class="logo" href="{{ url_for('seller.homepage') }}">Odogwu<span>S</span>eller  <i class='bx bxs-home' ></i></a>
 				{% block userName %}
-					<a class="username" href=""><i class='bx bxs-user'></i> Hi, {{ firstname }}</a>
+					<a class="username" href=""><i class='bx bxs-user'></i> Hi, {{ user.firstname.title() }}</a>
 				{% endblock %}
 				<div class="user-box">
 					{% block userOption %}
-						<a>Add Product</a>
+						<a href="{{ url_for('seller.add') }}">Add Product</a>
 						<a>Recently Added</a>
 						<a href="#help" class="help"><i class='bx bxs-help-circle' ></i> Help <i class='bx bxs-chevron-down'></i></a>
-						<a href="#logout" class="logout"><i class='bx bx-log-out' ></i> Logout</a>
+						<a href="/o-seller/logout" class="{{ url_for('seller_auth.logout') }}"><i class='bx bx-log-out' ></i> Logout</a>
 					{% endblock %}
 					{% block non_user %}
-					<a class="sign-in" href="/o-seller/login"> Sign In</a>
-					<a class="sign-up" href="/o-seller/> Sign Up</a>
+					<a class="sign-in" href="{{ url_for('seller_auth.login') }}"> Sign In</a>
+					<a class="sign-up" href="{{ url_for('seller_auth.sign_up') }}"> Sign Up</a>
 					<a> Guides to Selling</a>
 					<a href="#help" class="help"><i class='bx bxs-help-circle' ></i> Help <i class='bx bxs-chevron-down'></i></a>
 					{% endblock %}
@@ -51,7 +51,7 @@
 
 			{% block user_filter %}
 			<section class="filter">
-				<form action="/o-seller" class="search-form" id="search-form" method="POST">
+				<form action="{{ url_for('seller.homepage') }}" class="search-form" id="search-form" method="POST">
 					{{ form.csrf_token}}
 					<div class="all-category">
 						<label for="{{ form.category.id }}">Category: </label>
@@ -107,8 +107,9 @@
 			</section>
 			<section class="subscribe">
 				<h3>Subscribe To Our NewsLetter</h3>
-				<form action="" class="subscription">
-					<input type="text" placeholder="Email" name="suscriber" class="subscriber">
+				<form action="" class="subscription" method="POST">
+					{{ subscribe.csrf_token }}
+					{{ subscribe.email(class="subscriber", placeholder="Email") }}
 					<input type="submit" value="Submit" class="subscriber-submit">
 				</form>
 			</section>
@@ -117,8 +118,6 @@
 
 		<!-- jQuery cdn link-->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-		<!--Custom js script link-->
-		<script src="{{ url_for('.static', filename='js/base.js') }}"></script>
 		{% block js %}{% endblock %}
 	</body>
 </html>
