Resolve the cloudinary error 'Empty File'

--- a/api/routes/seller/templates/addProduct.html
+++ b/api/routes/seller/templates/addProduct.html
@@ -11,8 +11,8 @@
 
 {% block main %}
 <div class="product">
-	<form class="add-product" method="POST" action="{{ url_for('seller.add') }}" enctype="multipart/form-data">
-		{{ add_product_form.csrf_token }}
+	<form class="add-product" id="add-product" method="POST" action="{{ url_for('seller.add') }}" enctype="multipart/form-data">
+		{{ form.csrf_token }}
 
 		{% with messages = get_flashed_messages() %}
 			{% if messages %}
@@ -20,7 +20,7 @@
 					<a class="flash-link flash-home" href=""><i class='bx bxs-caret-left-square'></i><p>Go to Home</p></a>
 					<ul>
 						{% for message in messages %}
-							<p class="flash-text">Product Successfully Added</p>
+							<li class="flash-text">{{ message }}</li>
 						{% endfor %}
 					</ul>
 					<a class="flash-link flash-product" href=""><p>Check Product</p><i class='bx bxs-caret-right-square'></i></a>
@@ -31,28 +31,28 @@
 		<div class="product-detail">
 			<section>
 				<div class="form-section product-category">
-					<label for="{{ add_product_form.category.id }}" class="form-text">PRODUCT CATEGORY</label>
-					{{ add_product_form.category(class="form-control") }}
+					<label for="{{ form.category.id }}" class="form-text">PRODUCT CATEGORY</label>
+					{{ form.category(class="form-control") }}
 					<ul>
-						{% for error in add_product_form.category.errors %}
+						{% for error in form.category.errors %}
 							<li style="color: red; font-size: 0.8rem;">{{ error }}</li>
 						{% endfor %}
 					</ul>
 				</div>
 				<div class="form-section product-sub_category">
-					<label for="{{ add_product_form.sub_category.id }}" class="form-text">PRODUCT SUB-CATEGORY</label>
-					{{ add_product_form.sub_category(class="form-control", placeholder="Kitchen Refridgerators Cooling") }}
+					<label for="{{ form.sub_category.id }}" class="form-text">PRODUCT SUB-CATEGORY</label>
+					{{ form.sub_category(class="form-control", placeholder="Kitchen Refridgerators Cooling") }}
 					<ul>
-						{% for error in add_product_form.sub_category.errors %}
+						{% for error in form.sub_category.errors %}
 							<li style="color: red; font-size: 0.8rem;">{{ error }}</li>
 						{% endfor %}
 					</ul>
 				</div>
 				<div class="form-section product-name">
-					<label for="{{ add_product_form.name.id }}" class="form-text">PRODUCT NAME</label>
-					{{ add_product_form.name(class="form-control", placeholder="Thermocool Fridge Model 34573") }}
+					<label for="{{ form.name.id }}" class="form-text">PRODUCT NAME</label>
+					{{ form.name(class="form-control", placeholder="Thermocool Fridge Model 34573") }}
 					<ul>
-						{% for error in add_product_form.name.errors %}
+						{% for error in form.name.errors %}
 							<li style="color: red; font-size: 0.8rem;">{{ error }}</li>
 						{% endfor %}
 					</ul>
@@ -60,31 +60,31 @@
 			</section>
 			<section>
 				<div class="form-section product-stock">
-					<label for="{{ add_product_form.total_stock.id }}" class="form-text">QUANTITY IN STOCK</label>
-					{{ add_product_form.total_stock(class="form-control", placeholder="0") }}
+					<label for="{{ form.total_stock.id }}" class="form-text">QUANTITY IN STOCK</label>
+					{{ form.total_stock(class="form-control", placeholder="0") }}
 					<ul>
-						{% for error in add_product_form.total_stock.errors %}
+						{% for error in form.total_stock.errors %}
 							<li style="color: red; font-size: 0.8rem;">{{ error }}</li>
 						{% endfor %}
 					</ul>
 				</div>
 				<div class="form-section product-price">
-					<label for="{{ add_product_form.price.id }}" class="form-text">PRODUCT PRICE</label>
+					<label for="{{ form.price.id }}" class="form-text">PRODUCT PRICE</label>
 					<div class="product-price-box">
-						{{ add_product_form.price(class="form-control price-control", placeholder="0.00") }}
-						{{ add_product_form.currency(class="product-currency") }}
+						{{ form.price(class="form-control price-control", placeholder="0.00") }}
+						{{ form.currency(class="product-currency") }}
 					</div>
 					<ul>
-						{% for error in add_product_form.price.errors %}
+						{% for error in form.price.errors %}
 							<li style="color: red; font-size: 0.8rem;">{{ error }}</li>
 						{% endfor %}
 					</ul>
 				</div>
 				<div class="form-section product-discount">
-					<label for="{{ add_product_form.discount.id }}" class="form-text">PERCENTAGE DISCOUNT</label>
-					{{ add_product_form.discount(class="form-control") }}
+					<label for="{{ form.discount.id }}" class="form-text">PERCENTAGE DISCOUNT</label>
+					{{ form.discount(class="form-control") }}
 					<ul>
-						{% for error in add_product_form.discount.errors %}
+						{% for error in form.discount.errors %}
 							<li style="color: red; font-size: 0.8rem;">{{ error }}</li>
 						{% endfor %}
 					</ul>
@@ -93,26 +93,26 @@
 		</div>
 
 		<section class="product-description-box">
-			<label for="{{ add_product_form.description.id }}" class="form-text">PRODUCT DESCRIPTION</label>
-            {{ add_product_form.description(class="form-control product-description", placeholder="Write a description for the product") }}
+			<label for="{{ form.description.id }}" class="form-text">PRODUCT DESCRIPTION</label>
+            {{ form.description(class="form-control product-description", placeholder="Write a description for the product") }}
             <ul>
-                {% for error in add_product_form.description.errors %}
+                {% for error in form.description.errors %}
                     <li style="color: red; font-size: 0.8rem;">{{ error }}</li>
                 {% endfor %}
             </ul>
 		</section>
 
 		<section class="product-image">
-			<label for="{{ add_product_form.image.id }}" class="form-text product-image-text">UPLOAD IMAGE</label>
-            {{ add_product_form.image(class="product-image-control") }}
+			<label for="{{ form.image.id }}" class="form-text product-image-text">UPLOAD IMAGE</label>
+            {{ form.image(class="product-image-control") }}
             <ul>
-                {% for error in add_product_form.image.errors %}
+                {% for error in form.image.errors %}
                     <li style="color: red; font-size: 0.8rem;">{{ error }}</li>
                 {% endfor %}
             </ul>
 		</section>
 
-		<button type="submit" form="login-form" value="Submit" class="form-control product-submit">Submit</button>
+		<button type="submit" form="add-product" value="Submit" class="form-control product-submit">Submit</button>
 	</form>
 </div>
 {% endblock %}
