--- a/api/routes/seller/static/styles/signup.css
+++ b/api/routes/seller/static/styles/signup.css
@@ -34,6 +34,21 @@ label {
 	position: relative;
 }
 
+.flashes {
+	background-color: rgba(184, 53, 53, 0.6);
+	height: 3rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 15px;
+	position: relative;
+	text-align: center;
+}
+
+.flash-text {
+	color: white;
+}
+
 .multiple-box {
 	display: flex;
 	align-items: center;
