--- a/api/routes/seller/templates/signPage.html
+++ b/api/routes/seller/templates/signPage.html
@@ -18,6 +18,18 @@
 	{{ form.password.csrf_token }}
 	<h1>CREATE YOUR ODOGWU<span>S</span>ELLER ACCOUNT</h1>
 
+	{% with messages = get_flashed_messages() %}
+		{% if messages %}
+			<div class=" signup flashes">
+				<ul>
+					{% for message in messages %}
+						<li class="flash-text">{{ message }}</li>
+					{% endfor %}
+				</ul>
+			</div>
+		{% endif %}
+	{% endwith %}
+
 	<div class="signup section-detail">
 		<p class="detail">Login Information</p>
 	</div>
